Fixed overlap of page to nav bar for FAQ/Dashboard/WriteJournal pages

--- a/modus-app/src/pages/Faq.css
+++ b/modus-app/src/pages/Faq.css
@@ -1,9 +1,7 @@
 .dashboard {
   position: absolute;
-  width: 1377px;
-  height: 1024px;
-  left: 63px;
-  top: 0px;
+  width: 100%;
+  height: 100%;
   background: #f5f8ff;
 }
 
