--- a/modus-app/src/pages/journalDashboard.css
+++ b/modus-app/src/pages/journalDashboard.css
@@ -1,26 +1,21 @@
 section {
   position: absolute;
-  width: 1377px;
-  height: 024px;
-  left: 63px;
-  top: 0px;
+  width: 100%;
+  height: 100%;
   background: #f5f8ff;
 }
 
 .dashboard {
   position: absolute;
-  width: 1377px;
-  height: 529px;
-  left: 53px;
-  top: 0px;
-  opacity: 0.5;
+  width: 100%;
+  height: 100%;
 }
 
 h2 {
   position: absolute;
   width: 718px;
   height: 162px;
-  left: 361px;
+  /* left: 361px; */
   top: 122px;
   font-family: Spectral;
   font-style: normal;
